# disponent

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  hinzu.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  functional-core.yml  straitjacket.yml
crates/disponent-cli/: Cargo.toml
crates/disponent-cli/src/: main.rs  mcp_server.rs
crates/disponent-cli/tests/: mcp_stdio.rs
crates/disponent-core/: Cargo.toml
crates/disponent-core/src/: agent.rs  backend.rs  catalog.rs  detectors.rs  engine.rs  lib.rs  local.rs  mcp_generated.rs  modal.rs  modal_driver.py  observe.rs  otel.rs  schema_gen.rs  sink.rs  status.rs
crates/disponent-core/src/agent/: tests.rs
crates/disponent-core/src/detectors/: tests.rs
crates/disponent-core/src/engine/: messaging.rs  tests.rs  watch.rs
crates/disponent-core/tests/: backend_lifecycle.rs  local_lifecycle.rs  messaging.rs  modal_lifecycle.rs  observation.rs  sink.rs
crates/disponent-core/tests/common/: mod.rs
crates/disponent-hold/: Cargo.toml
crates/disponent-hold/src/: client.rs  lib.rs  protocol.rs  pty.rs  ring.rs  server.rs
crates/disponent-hold/tests/: roundtrip.rs
crates/disponent-node/: Cargo.toml  biome.json  node.test.ts  package.json
crates/disponent-node/src/: core_impl.rs  generated.rs  lib.rs
crates/disponent-python/: .gitignore  Cargo.toml  pyproject.toml
crates/disponent-python/python/disponent/: __init__.py
crates/disponent-python/src/: core_impl.rs  generated.rs  lib.rs
crates/disponent-python/tests/: conftest.py  test_lifecycle.py
crates/disponent-ruby/: .gitignore  Cargo.toml  Gemfile  extconf.rb
crates/disponent-ruby/src/: core_impl.rs  generated.rs  lib.rs
crates/disponent-ruby/test/: test_disponent.rb
crates/disponent-schema/: Cargo.toml
crates/disponent-schema/src/: lib.rs
notes/: ai-dispatch-comparison.md  design.md  manager-worker-comms.md  owning-the-terminal.md  supervisor-worker-comms.md
schema/: api.json  catalog.json  disponent.tsp  schema_docs.json
scripts/: coverage.sh  dev.sh  gen.sh  go_dev.sh
