[workspace]
resolver = "2"
members = [
    "crates/disponent-core",
    "crates/disponent-cli",
    "crates/disponent-hold",
    "crates/disponent-node",
    "crates/disponent-python",
    "crates/disponent-ruby",
]
# disponent-node (napi), disponent-python (PyO3/maturin), and disponent-ruby
# (Magnus/rb_sys) build via their own toolchains, not plain `cargo build` — keep
# them out of the default set so core/CLI builds stay fast (the entl move).
# disponent-hold is plain sync Rust on the CLI side, so it stays IN the default
# set (like disponent-cli) — one static artifact ships to a VM.
default-members = [
    "crates/disponent-core",
    "crates/disponent-cli",
    "crates/disponent-hold",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zmaril/disponent"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v7"] }
tiny_http = "0.12"
libc = "0.2"
