[package]
name = "disponent-cli"
description = "The disponent CLI: `disponent mcp` serves the engine's tools over stdio."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "disponent"
path = "src/main.rs"

[dependencies]
disponent-core = { path = "../disponent-core" }
disponent-hold = { path = "../disponent-hold" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
