[package]
name = "disponent-core"
description = "Dispatch work to coding agents — the engine: ledger, catalog, and the generated MCP surface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# The schema tool doubles as the runtime data plane: SqlCodec compiles typed
# mutations into ordered {sql, params} plans (the sink + driverPlan). Pinned by
# SHA, same discipline as the codegen pin in scripts/gen.sh — bump deliberately.
fluessig = { git = "https://github.com/zmaril/fluessig", rev = "d1a4eca8b1940967393646f09415f9f6ee760063" }
rusqlite = { version = "0.40", features = ["bundled"] }
tiny_http = { workspace = true }
# The M1 local-holder path (DISPONENT_LOCAL_HOLDER): the local backend can run
# the agent under the first-party pty holder instead of tmux, dialing its socket
# for send/capture/observe/kill. hold pulls only anyhow + libc, so no cycle.
disponent-hold = { path = "../disponent-hold" }
