[package]
name = "disponent-node"
description = "Node-API (napi-rs) binding: the disponent engine, in-process in Node/Bun."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# `tokio_rt` gates the streaming surface the generated binding uses: napi's
# re-exported `tokio` (spawn_blocking), `AsyncGenerator`, and the
# `#[napi(async_iterator)]` dressing over `driverPlan`/`events`.
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
disponent-core = { path = "../disponent-core" }
# The shared streaming contract (`Poll`/`PollStream`) the generated surface imports;
# pinned to the same fluessig SHA the codegen (scripts/gen.sh / CI) generates against.
fluessig-runtime = { git = "https://github.com/zmaril/fluessig", rev = "d1a4eca8b1940967393646f09415f9f6ee760063" }
serde_json = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
napi-build = "2"
