[package]
name = "disponent-python"
description = "Python (PyO3) binding: the disponent engine, in-process in Python."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# The compiled extension is `disponent._disponent`; the pure-Python
# `python/disponent/` package (mixed maturin layout) re-exports it.
name = "_disponent"
crate-type = ["cdylib"]

[dependencies]
# multiple-pymethods lets the @manual `wait()` in lib.rs extend the generated
# `Disponent` class with a second #[pymethods] block.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39", "multiple-pymethods"] }
disponent-core = { path = "../disponent-core" }
# The shared streaming contract (`Poll`/`PollStream`) the generated surface imports;
# pinned to the same fluessig SHA the codegen (scripts/gen.sh / CI) generates against.
fluessig-runtime = { git = "https://github.com/zmaril/fluessig", rev = "0856fe546cb0e5c547ea8cba0bb0ff281012b28c" }
# the async-runtime wiring the generated STREAMING surface needs (the pyo3 analogue
# of napi's tokio_rt): pyo3-async-runtimes bridges the poll future to asyncio via
# `future_into_py`, and tokio drives the blocking poll off the event loop via
# `spawn_blocking`. Pin pyo3-async-runtimes to pyo3's minor (0.29).
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
