[package]
name = "disponent-ruby"
description = "Ruby (Magnus) binding: the disponent engine, in-process in Ruby."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# Ruby loads `disponent.so`; the crate lib is `disponent` so Magnus emits `Init_disponent`.
name = "disponent"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
disponent-core = { path = "../disponent-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }
